<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">malarm</string>
    <string name="stop_music">Stop Music</string>
    <string name="music_stopped">Music stopped</string>

    <string name="set_alarm">Set Alarm</string>
    <string name="stop_alarm">Cancel Alarm</string>
    <string name="stop_vibration">Stop vibaration</string>
    <string name="play_wakeup">Play</string>
    <string name="pref_menu">Preference</string>
    <string name="pref_webview_url">Web site to display</string>
    <string name="preference_time_title">Sleep time</string>
    <string name="pref_sleeptime">Sleep time</string>
    <string name="enable_vibration">ON</string>
    <string name="disable_vibration">OFF</string>
    <string name="pref_vibration">Wakeup vibration</string>
    <string name="set_now_short">Now!</string>

    <string name="use_native_player_title">Use native player</string>
    <string name="use_internal_player">Do not use native player (use MediaPlayer)</string>
    <string name="use_native_player">Use native player</string>
    <string name="playlist_path_title">Playlist directory</string>
    <string name="playlist_path_summary">Playlist directory where sleep.m3u and wakeup.m3u is saved</string>
    <string name="enter_path_to_playlist">Enter directory where sleep.m3u and wakeup.m3u is saved</string>
    <string name="malarm_version_title">Version</string>
    <string name="help_url">http://mamewotoko.github.com/malarm/doc/0.99/index_en.html</string>
    <string name="help_title">Help</string>
    <string name="help_summary">Display how to use malarm as a web page</string>
    
    <string name="git_url">https://github.com/mamewotoko/malarm/</string>
    <string name="dialog_title">malarm download page</string>
    
    <string name="pref_playlist_category">Playlist preferences</string>
    <string name="pref_wakeup_playlist">wakeup.m3u playlist</string>
    <string name="pref_no_wakeup_playlist">Not exists (Please create it)</string>
    <string name="pref_ok_wakeup_playlist">Exists</string>
    <string name="pref_reload_playlist">Reload playlist</string>
    <string name="playlist_reload">Playlists are loaded</string>
    
    <string name="pref_sleep_playlist">sleep.m3u playlist</string>
    <string name="pref_no_sleep_playlist">Not exists (Please create it)</string>
    <string name="pref_ok_sleep_playlist">Exists</string>

    <string name="pref_create_playlist_title">Create playlist</string>
    <string name="pref_create_playlist_summary">Create playlist which has all files in playlist directory</string>

    <string name="pref_playlist_does_not_exist">Playlist does not exist</string>
    <string name="notify_waiting_title">malarm is set</string>
    <string name="notify_wakeup_text">Good morning!</string>
    <string name="pref_sleep_volume_title">Sleep tunes volume</string>
    <string name="pref_wakeup_volume_title">Wakeup tunes volume</string>
    <string name="other_category_title">others</string>
    <string name="pref_clear_webview_cache_title">Clear cache of Webview</string>
    <string name="pref_clear_webview_cache_summary">This clears cache and history of malarm web view. One of browser is not cleared.</string>
    
    <string name="volume_category_title">Volume and vibration</string>
    <string name="volume_format">Set volume between 0 and {0}, current volume is {1}</string>
    <string name="file_exists_format">A file {0} already exists</string>
    <string name="playlist_created_format">A playlist {0} is created.</string>
        
    <string name="pref_default_time_title">Default time of time picker</string>
    <string name="pref_default_time_summary">Set time when you wake up</string>
    <string name="pref_time_category_title">Time preferences</string>
    
    <string name="voice_dialog">Tell me alarm time\n(support Japanese only)</string>
    <string name="voice_success_format">Set alarm time as "{0}"</string>
    <string name="voice_fail">Recognition as time failed</string>
    <string name="stop_loading">Loading aborted</string>
    <string name="volume_minus"> - </string>
    <string name="volume_plus"> + </string>
    <string name="sleep_playlist_viewer_title">malarm: Sleep playlist (sleep.m3u)</string>
    <string name="wakeup_playlist_viewer_title">malarm: Wakeup playlist (wakeup.m3u)</string>
    <string name="pref_about_title">About malarm</string>
    <string name="select_time_from_list">Select alarm time</string>
    <string name="ask_play_sleep_tune">Do you listen sleep tunes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save_playlist">Save</string>
    
    <string name="init_voice">Initializing voice recognizer</string>
    <string name="voice_button_desc">Set time by voice</string>
    <string name="next_button_desc">Play next tune</string>
    <string name="webview_cache_cleared">Webview cache is cleared</string>
    <string name="unit_min">{0} min</string>
    <string name="play_with_sleep_timer">Playing music with sleep timer</string>
    <string name="sleep_playlist_not_exist">Playlist sleep.m3u does not exist.</string>
    <string name="playing">Playing</string>

    <string name="pref_stop_on_unplugged_title">Stop music when unplugged</string>
    <string name="pref_stop_on_unplugged_on_summary">stop playing</string>
    <string name="pref_stop_on_unplugged_off_summary">continue playing</string>

    <string name="play">play</string>
    <string name="pause">pause</string>
    
    <string name="saved">Saved</string>
    <string name="failed">Failed</string>

    <string name="not_wifi_only">Use Wi-Fi or mobile network</string>
    <string name="wifi_only">Use Wi-Fi only</string>
    <string name="pref_wifi_only">Use Wi-Fi only</string>

    <string name="pref_ui_category">UI</string>
    <string name="pref_use_drawable_ui">Use drawable UI</string>
    <string name="pref_reset_url_index">Start from initial page on wakeup</string>

<!--  TODO: translate -->
    <string name="pref_open_drawable_title">Open drawable on wakeup</string>
</resources>
