<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <android.support.v7.widget.SwitchCompat
        android:textOff="@string/set_alarm"
        android:textOn="@string/stop_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarm_button" />
    <TextView
        android:id="@+id/message"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/target_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <!--
        <TextView
        android:id="@+id/sleep_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#005500"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    -->
  </LinearLayout>
</android.support.v7.widget.Toolbar>
